--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,8 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<div>
+    <center>
+        <h1>{{message}}</h1>
+        <h2>{{error.status}}</h2>
+        <pre>Have patience, come back later.</pre>
+        <footer>UTFPR</footer>
+    </center>
+</div>
