--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -1,10 +1,8 @@
 <link rel='stylesheet' href='/stylesheets/styleIndex.css' />
-<script src="/javascripts/loadUsers.js" />
+<script src="/javascripts/loadUsers.js">
 </script>
 
-<body>
-
-    <div class="container-fluid">
+    <div class="container-fluid" id="body">
         <div class="row content">
             <div class="col-sm-3 sidenav">
                 <h4 id="h4User"><img id="imgUser" src="/images/caricatura.jpg" alt="ImagenUser">{{nameUser}}</h4>
@@ -18,12 +16,9 @@
                     </span>
                 </div>
                 <div id="divList">
-                        <ul class="nav nav-pills nav-stacked">
-                            {{#each people}}
-                                <li><img id="imgUser" src="/images/caricatura2.jpg" alt="ImagenFriend">
-                                {{nameFriend}} {{lastName}}</li>
-                            {{/each}}
-                        </ul>
+                    <ul id="listPeople" class="nav nav-pills nav-stacked">
+                        <li id="people"></li>
+                    </ul>
                     <br>
                 </div>
             </div>
